# competitions

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  competitions.sln  makefile  run_cmake.sh
advent_of_code/: TODO.md  auto_run.py  base.cpp  main.cpp
codeforces/: base.cpp  main.cpp
codeforces/problemset/: 1325e.cpp
common/: TODO.md  assert_exception.h  base.h  base_graph.h  binary_search.h  binary_search_tree.h  common.vcxproj  common.vcxproj.filters  compile_test.cpp  coordinate_compression.h  date.h  disjoint_set.h  disjoint_set_extended.h  hash.h  heap.h  include_headers.cpp  lca.h  local.h  makefile  modular.h  modular_io.h  modular_proxy.h  node.h  nodes_manager.h  nodes_manager_fixed_size.h  proxy_run_base.h  proxy_run_main.h  stl_base.h  stl_full.h  template.h  test_proxy.h  thread_pool.h  timer.h  unsigned_multiset.h  unsigned_set.h
common/algorithm/: assignment.h  binary_search.h  linear_search.h
common/binary_indexed_tree/: bit.h  bit_2d.h  bit_3d.h  bit_sparse.h
common/binary_search_tree/: aa_tree.h  action.h  action_utils.h  avl_tree.h  base_tree.h  build.h  find_by_key.h  find_by_order.h  fixed_tree.h  info.h  info_utils.h  insert.h  insert_by_key.h  insert_by_key_with_path.h  node.h  node_action.h  node_build.h  node_info.h  node_parent_links.h  node_utils.h  nodes_manager.h  perfect_tree.h  red_black_tree.h  red_black_tree_base.h  red_black_tree_old.h  red_black_tree_upf.h  red_black_tree_upt.h  rotate.h  scapegoat_tree.h  sibling.h  splay_tree.h  static_tree.h  swap.h  traversal.h  treap.h  treap_utils.h  tree.h  unbalanced_tree.h  update_info_with_path.h  wavl_tree.h  (+2 more)
common/cover/: dlmatrix.h  dlvmatrix.h  dlx.h  dlx_call_back.h  dlxe.h  dlxe_minmax.h  latin_square.h
common/data_structures/: compact_intervals_based_set.h  coordinate_compression.h  deque.h  deque_fixed_size.h  disjoint_set.h  disjoint_set_extended.h  enum_string_map.h  intervals_based_set.h  max_linear.h  mdvector.h  recursive_vector.h  unsigned_multiset.h  unsigned_set.h  van_emde_boas_tree_hash_table.h
common/factorization/: base.h  factorization.h  mertens.h  mertens_compact.h  primality_test.h  primes.h  primes_count_quotients.h  primes_count_quotients_4k13.h  primes_generator.h  primes_list.h  primes_range.h
common/files/: command_line.h  csv_reader.h  file_to_string.h  json.h
common/generating_function/: generating_function.h
common/geometry/: affine_transformation.h
common/graph/: README.md  base_graph.h  base_subgraph.h  base_tree.h  base_tree_isomorphic_hash.h  bipartite.h  centroid_decomposition.h  cnone.h  edge.h  graph.h  graph_ei.h  lca.h  tree.h  tree_ei.h
common/hash/: array.h  base.h  combine.h  hash.h  integral.h  mix.h  pair.h  pointer.h  policy.h  range.h  value.h  vector.h
common/heap/: README.md  binary_heap.h  binomial.h  binomial_ukey_value_map.h  bucket_queue.h  bucket_ukey_map.h  dheap.h  dheap_ukey_pos_map.h  dheap_ukey_value_map.h  dpheap_ukey_value_map.h  fibonacci.h  fibonacci_ukey_value_map.h  heap.h  monotone_bucket_queue.h  monotone_bucket_ukey_map.h  pairing.h  pairing_base.h  pairing_ukey_value_map.h  ukey_value_dmap.h  ukey_value_heap.h  ukey_value_map.h
common/linear_algebra/: matrix.h  matrix_static_size.h  vector.h  vector_static_size.h
common/matrix/: matrix_static_size.h
common/memory/: blocks_manager.h  contiguous_nodes_manager.h  node.h  nodes_manager.h  nodes_manager_fixed_size.h
common/modular/: arithmetic.h  binomial_coefficient_modular.h  binomial_coefficient_table.h  complex_modular_proxy.h  discrete_log_full_map.h  discrete_log_sqrt_map.h  factorial_modular.h  factorial_modular_proxy.h  modular.h  modular_arithmetic_static_proxy.h  modular_bool.h  sum_of_powers_modular.h
common/numeric/: alphabetic_code.h  bernoulli.h  binomial_coefficient_modular.h  binomial_coefficient_table.h  catalan.h  collatz.h  complex.h  complex_modular_proxy.h  continued_fraction.h  convolution_base.h  dcomplex.h  factorial.h  factorial_double.h  factorial_modular.h  factorial_modular_proxy.h  fibonacci.h  fibonacci_modular_matrix.h  fraction.h  fraction_io.h  legendre_symbol.h  log_double.h  log_double_factorial.h  log_double_io.h  long_unsigned.h  long_unsigned_hash.h  long_unsigned_io.h  modular.h  modular_arithmetic.h  modular_arithmetic_proxy.h  modular_arithmetic_static_proxy.h  primality_test.h  primes_list.h  primes_list_extended.h  primitive_root.h  utils.h
common/optimization/: binary_search.h  linear_model.h  minimum.h  minimum_2d.h  root.h  ternary_search.h  ternary_search_2d.h
common/permutation/: base.h  fixed_point.h  inverse_line.h  invert_line.h  root.h  (+4 more)
competitions/: competitions.vcxproj
hackerrank/: base.cpp  hackerrank.vcxproj  hackerrank.vcxproj.filters  main.cpp  makefile  proxy_gen.cxx  proxy_gen.h
ipcs/: main.cpp  proxy_gen.cxx  proxy_gen.h
leetcode/: base.cpp  main.cpp  proxy_gen.cxx  proxy_gen.h  test.h
project_euler/: main.cpp  proxy_gen.cxx  proxy_gen.h
tester/: assert.h  binary_search_tree.cpp  binary_search_tree.h  binary_search_tree_action.h  binary_search_tree_info.h  disjoint_set_proxy.h  find_primes_for_fft.cpp  graph_ei_distance_dijkstra.h  graph_ei_distance_positive_cost.h  graph_type.h  hash.h  hash_combine.h  main.cpp  makefile  matrix_mult.h  minimum_spanning_tree.h  prime_generation.cpp  prime_generation.h  primes_count.cpp  primes_count.h  primes_generation.cpp  primes_generation.h  tester.vcxproj  tester.vcxproj.filters  tester_binary_search_tree.cpp  tester_binary_search_tree.h  tester_binary_search_tree_split_join.cpp  tester_binary_search_tree_split_join.h  tester_continued_fraction_convergent.cpp  tester_disjoint_set.cpp  tester_disjoint_set.h  tester_dynamic_connectivity.cpp  tester_dynamic_connectivity.h  tester_fixed_universe_successor.cpp  tester_fixed_universe_successor.h  tester_generating_function.cpp  tester_graph_ei_distance.cpp  tester_graph_ei_distance.h  tester_graph_ei_distance_base.h  tester_graph_ei_distance_base_positive.h  (+33 more)
tests/: TODO.md
timus/: main.cpp
utils/: current_solution.cpp  include_headers.cpp
(+4889 files in other folders)
